# streamdeckfs

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  example-config.txt  license-header.txt  pyproject.toml  setup.cfg  setup.py  streamdeckify.py
examples/: README.md  twidi-config.txt
examples/pomodoro/: README.md
examples/pomodoro/KEY_R,C;name=pomodoro/: VAR_LAST  VAR_START
examples/stopwatch/: README.md
examples/stopwatch/KEY_ROW_X_COL_Y;name=stopwatch/: IMAGE;$VAR_ICON_STYLE
streamdeckfs/: __init__.py  __main__.py  common.py  py_expression_eval.py  threads.py  web.py
streamdeckfs/assets/fonts/noto-emoji/: LICENSE
streamdeckfs/assets/web/statics/: common.css  common.js
streamdeckfs/assets/web/templates/: auth.jinja2  deck.jinja2  index.jinja2
streamdeckfs/commands/: __init__.py  api.py  base.py  create_web_deck.py  inspect.py  make_dirs.py  run.py
streamdeckfs/entities/: __init__.py  base.py  deck.py  event.py  image.py  key.py  page.py  text.py  var.py
streamdeckfs/watchers/: base.py  inotify.py
streamdeckify/: __main__.py  common.py  threads.py
streamdeckify/commands/: __init__.py  api.py  base.py  brightness.py  inspect.py  make_dirs.py  run.py
streamdeckify/entities/: __init__.py  base.py  deck.py  event.py  image.py  key.py  page.py  text.py
streamdeckify/watchers/: __init__.py  base.py  inotify.py
