[metadata]
name = streamdeckify
version = 1.0
author = Stephane "Twidi" Angel
author_email = s.angel@twidi.com
url = https://github.com/twidi/streamdeckify
description = A software to handle a StreamDeck from Elgato, via directories and files.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = streamdeck, elgato, inotify
platforms = Linux
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    click
    click-log
    inotify-simple
    pillow
    ProxyTypes
    psutil
    streamdeck
python_requires = >=3.9

[options.packages.find]
include =
    streamdeckify
    streamdeckify.*

[options.extras_require]
thread-names =
    python-prctl

[options.entry_points]
console_scripts =
    streamdeckify = streamdeckify.commands:main
