[metadata]
name = streamdeckfs
version = 1.5.1.dev0
author = Stephane "Twidi" Angel
author_email = s.angel@twidi.com
url = https://github.com/twidi/streamdeckfs
description = A software to handle a StreamDeck from Elgato, via the file system.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = streamdeck, elgato, inotify
platforms = Linux
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    cached_property
    click
    click-log
    cloup
    emoji
    inotify-simple
    pillow
    ProxyTypes
    psutil
    streamdeck
python_requires = >=3.9

[options.packages.find]
include =
    streamdeckfs
    streamdeckfs.*

[options.extras_require]
thread-names =
    python-prctl
dev =
    black
    flake8
    isort

[options.entry_points]
console_scripts =
    streamdeckfs = streamdeckfs.commands:main
    sdfs = streamdeckfs.commands:main

[flake8]
ignore = W503,E203,E501,E731
exclude = .git,__pycache__,build,dist
